chore: fix spacing issue for chrome extension bar

--- a/crowdsource-fe/src/components/Feedback/Feedback.module.scss
+++ b/crowdsource-fe/src/components/Feedback/Feedback.module.scss
@@ -4,6 +4,7 @@
   position: fixed;
   right: 1rem;
   width: 3.75rem;
+  z-index: 10;
 
   @include media-breakpoint-up(lg) {
     bottom: 1.5rem;
